RESOLVED FIXED63152
runAnimationTest always fails if the pause API is enabled and the test target animation has "infinite" iteration count.
https://bugs.webkit.org/show_bug.cgi?id=63152
Summary runAnimationTest always fails if the pause API is enabled and the test target...
Young Han Lee
Reported 2011-06-22 10:12:28 PDT
Created attachment 98195 [details] testcase The testcase is a slightly modified version of the LayoutTests/animations/keyframes.html, and the only difference is the animation-iteration-count property. The result of the testcase : -PASS - "left" property for "box" element at 0.3s saw something close to: 100 -PASS - "left" property for "box" element at 0.7s saw something close to: 200 +FAIL - animation "anim" is not running +FAIL - animation "anim" is not running You can see that any animation test fails if you put a '-webkit-animation-iteration-count: infinite' line to the test.
Attachments
testcase (1.48 KB, text/html)
2011-06-22 10:12 PDT, Young Han Lee
no flags
Patch (1.71 KB, patch)
2011-06-23 07:40 PDT, Young Han Lee
no flags
Patch (4.41 KB, patch)
2011-06-23 09:07 PDT, Young Han Lee
no flags
Young Han Lee
Comment 1 2011-06-23 07:40:29 PDT
Young Han Lee
Comment 2 2011-06-23 07:41:38 PDT
The pausing conditions in the pauseAnimationAtTime() was wrong.
Simon Fraser (smfr)
Comment 3 2011-06-23 08:18:59 PDT
Comment on attachment 98349 [details] Patch Needs a testcase!
Young Han Lee
Comment 4 2011-06-23 08:44:55 PDT
(In reply to comment #3) > (From update of attachment 98349 [details]) > Needs a testcase! Oh, I thought a testcase isn't needed in this case because this is a change for the test framework itself. :) Okay, new patch will come shortly.
Young Han Lee
Comment 5 2011-06-23 09:07:40 PDT
WebKit Review Bot
Comment 6 2011-06-23 12:11:21 PDT
Comment on attachment 98356 [details] Patch Clearing flags on attachment: 98356 Committed r89597: <http://trac.webkit.org/changeset/89597>
WebKit Review Bot
Comment 7 2011-06-23 12:11:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.